fixing dropdown menu and cover picture(wasn't covering entire page on ipad pro)

--- a/assets/scss/news.scss
+++ b/assets/scss/news.scss
@@ -26,6 +26,7 @@ $tabletWidth: 1100px;
         background: linear-gradient(to bottom, rgba(0, 0, 0, 0.37) 0%,rgba(0, 200, 255, 0.4) 100%),
         url("http://www.sompaisoscatalans.cat/simage/176/1769507/medical-background-wallpaper.png?fbclid=IwAR2Vgrk1EZxisfMDeYgbzzcockz6G0cghLVK1AEmPyaUbDG2tsmWYJ-RyXQ") 
         center center no-repeat;
+        background-size: cover;
         .info-box{
             h1{
                 font-family: 'Black Ops One', cursive;
